# viz-rag

./: .env.example  .gitignore  ATTRIBUTION.md  README.md  pyproject.toml  sources.yaml
corpus/lessons/: CHANGELOG.md  baby-name-diversity-metrics.md  ggplotly-boxplot-jitter-legend.md  linkedin-carousel-ggplot2.md  plotly-static-png-export.md
corpus/notes/: vad-framework.md
corpus/style/: chart-choice-heuristics.md  ft-principles.md
evaluation/: eval.py  test.py  tests.jsonl
ingest/: build_corpus.R  build_corpus.py  run_build.R
rag/: __init__.py  _runtime.py  answer.py  answer_advanced.py  app.py  config.py  documents.py  ingest.py  preprocess.py  retrieve.py  visualize.py
scripts/: fetch_sources.sh  run.cmd  run.ps1
