[project]
name = "viz-rag"
version = "0.1.0"
description = "RAG corpus and assistant for ggplot2 / TidyTuesday visualization"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.1.0",
    "langchain>=0.3.27",
    "langchain-core>=0.3.76",
    "langchain-chroma>=0.2.6",
    "langchain-huggingface>=1.0.0",
    "langchain-ollama>=1.0.0",
    "langchain-openai>=0.3.33",
    "langchain-text-splitters>=0.3.11",
    "chromadb>=1.1.0",
    "openai>=1.109.0",
    "ollama>=0.6.0",
    "litellm>=1.77.5",
    "gradio>=5.47.0,<6.0",
    "pydantic>=2.0.0",
    "sentence-transformers>=5.1.0",
    "numpy>=2.0.0",
    "scikit-learn>=1.7.0",
    "plotly>=6.0.0",
    "tiktoken>=0.11.0",
    "tqdm>=4.67.0",
]

[project.scripts]
viz-rag-ingest = "rag.ingest:main"
viz-rag-app = "rag.app:main"
viz-rag-eval = "evaluation.eval:main"
viz-rag-visualize = "rag.visualize:main"
viz-rag-retrieve = "rag.retrieve:main"

[build-system]
requires = ["setuptools>=80.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["rag*", "evaluation*"]
